Fixed minor bug with header overlapping the loading screen

--- a/src/styles/global/_loading.scss
+++ b/src/styles/global/_loading.scss
@@ -8,8 +8,11 @@
     .spinner-container{
         position: fixed;
         top: 0;
+        left: 0;
         height: 100vh;
         width: 100vw;
+        background: $white;
+        z-index: 999;
         .lds-ring {
             display: inline-block;
             position: relative;
